=================
Changes for Crate
=================

Unreleased
==========

 - Updated crate certificates in the ssl truststore.

 - Fixed an issue that could cause bulk update requests to fail if the
   ``bulkArgs`` contained only one item

2015/11/11 0.52.2
=================

 - Updated crate-admin to 0.15.3 which includes following changes:

   - fix: REPLICATED DATA at the overview page showed incorrect percentage of
     of replicated data when number of undereplicated records was higher than
     number of total records

 - Updated crash to 0.14.2 which contains following changes:

   - Fixed an assertion error that could occur under python2.7

2015/11/04 0.52.1
=================

 - Fix: clean up file descriptors in case of exceptions when retrieving blobs
   over the REST api

 - Fixed an issue that caused orphaned partitions with an remaining alias to
   not be recognized correctly

 - Fixed an issue that was causing like queries to fail if using a special regex 
   character

 - Upgraded Elasticsearch to 1.7.3

 - Fixed the issue which causes overloading of the first configured node in
   the cluster when multiple clients connections are established

 - Fixed a possible race condition that could lead to queries getting stuck
   (Only affected SELECT queries with a limit/offset > 500000) 

 - Fix: Crate won't start properly if a plugin loading error occurs
   (e.g. through a misconfigured plugin)
 
 - Fixed an issue that was introduced in 0.52.0 which could cause a
   FetchContext to remain open longer than necessary in an error case.
   This could then lead to failures if an attempt was made to move shards to
   which the FetchContext hold onto.
 
 - Updated crash to version 0.14.1 which contains the following changes:

   - Floating point values are no longer rounded to 6 places under python2.7 if
     output using the tabular or mixed output format.
     Now the behaviour for all output formats is the same and consistent with 